--- a/src/assets/styles/aboutus.css
+++ b/src/assets/styles/aboutus.css
@@ -1,5 +1,5 @@
 .about-main {
-  background-image: url(../img/bg-about-section-desktop-view.jpg);
+  background-image: url(/images/bg-about-section-desktop-view.jpg);
   background-size: cover;
   background-position: top;
   min-height: 200vh;
@@ -124,9 +124,9 @@
   border-radius: 50%;
   padding: 15px;
   margin: 10px;
-  width: 40px;
-  height: 40px;
-  font-size: 18px;
+  width: 50px;
+  height: 50px;
+  font-size: 14px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -460,7 +460,7 @@
 
 @media only screen and (max-width: 1400px) {
   .about-main {
-    background-image: url(../img/bg-about-section-laptop-view.jpg);
+    background-image: url(/images/bg-about-section-laptop-view.jpg);
     min-height: 2200px;
   }
 
@@ -511,7 +511,7 @@
 
 @media only screen and (max-width: 990px) {
   .about-main {
-    background-image: url(../img/bg-about-section-laptop-view.jpg);
+    background-image: url(/images/bg-about-section-laptop-view.jpg);
     min-height: 2200px;
   }
 
@@ -526,7 +526,7 @@
 
 @media only screen and (max-width: 800px) {
   .about-main {
-    background-image: url(../img/bg-about-section-mobile-view.jpg);
+    background-image: url(/images/bg-about-section-mobile-view.jpg);
     min-height: 4200px;
   }
 
