--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -82,6 +82,7 @@
   background-size: cover;
   background-position: center center;
   min-height: 100vh;
+  background-color: white;
 }
 .sub-home {
   display: flex;
@@ -169,7 +170,6 @@
 
 .home-visual h2 {
   text-align: center;
-  font-size: 10px;
   color: var(--blue-alt-ctrl);
   font-size: 1.7rem;
   margin: 0.5rem 0;
@@ -449,7 +449,7 @@
     margin: 0 auto 2rem auto;
   }
   .home-visual h2 {
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
 
   .visual-image-card {
