--- a/src/assets/styles/festival.css
+++ b/src/assets/styles/festival.css
@@ -223,8 +223,8 @@ h4 {
 /* 🤬🤬🤬🤬🤬🤬 */
 .search-festival {
   position: relative;
-  width: 30px;
-  height: 30px;
+  width: 38.6px;
+  height: 38.6px;
   background-color: var(--light-gray-alt);
   border: 1.9px solid var(--blue-alt);
   border-radius: 60px;
@@ -233,14 +233,17 @@ h4 {
   transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2.06);
   /* transition: all 0.3s ease; */
   z-index: 95;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .search-festival .icon-font-awesome {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 28px;
-  height: 28px;
+  top: 10;
+  left: 10;
+  width: 26px;
+  height: 26px;
   color: var(--blue-alt);
   font-size: 1rem;
   background-color: var(--light-gray-alt);
@@ -374,12 +377,7 @@ h4 {
 }
 
 .festival-card .img-box {
-  /* position: absolute;
- top: 50%;
- transform: translateY(-50%);
- width: 100%;
- height: 100%;
- transition: .5s; */
+ position: relative;
   width: 100%;
   height: 90%;
 }
