--- a/src/assets/styles/festival.css
+++ b/src/assets/styles/festival.css
@@ -144,6 +144,7 @@ h4 {
   }
 }
 .global-fest {
+  background-color: #ffffff;
   padding: 5rem 0;
 }
 
@@ -167,7 +168,7 @@ h4 {
   font-size: 5rem;
   font-weight: 900;
   text-transform: uppercase;
-  animation: transitionIn 0.75s;
+  animation: transitionIn 0.3s;
 }
 
 .underline {
@@ -176,20 +177,20 @@ h4 {
   background-color: var(--blue-alt-ctrl);
   margin: 0 auto;
   margin-bottom: 3rem;
-  animation: transitionIn 0.75s;
+  animation: transitionIn 0.3s;
 }
 
 .gall-btn-cont {
   background-color: var(--light-gray-alt);
-  width: 600px;
+  max-width: 800px;
   display: flex;
   justify-content: center;
   margin: 0 auto;
   gap: 1rem;
   padding: 1rem;
-  border-radius: 50px;
+  border-radius: 12px;
   margin-bottom: 4rem;
-  animation: transitionIn 0.75s;
+  animation: transitionIn 0.3s;
 }
 .filter-btn.search-hide {
   display: none;
@@ -202,7 +203,7 @@ h4 {
   color: var(--blue-alt-ctrl);
   border-color: var(--blue-alt);
   border: 1.9px solid var(--blue-alt);
-  width: 100px;
+  width: 140px;
   border-radius: 50px;
   font-size: 1rem;
   text-transform: capitalize;
@@ -210,11 +211,11 @@ h4 {
   letter-spacing: 1px;
   padding: 0.375rem 0.2rem;
   cursor: pointer;
-  transition: all 0.3s ease;
+  transition: all 0.1s ease;
 }
 .active,
 .filter-btn:hover {
-  transform: scale(1.17);
+  transform: scale(1.1);
   background-color: var(--blue-alt);
   /* background-image: linear-gradient(180deg, var(--purple-light) 0%, #6154f3 100%); */
   color: white;
@@ -230,7 +231,7 @@ h4 {
   border-radius: 60px;
   /* box-shadow: 0 0 0 5px #2573ef; */
   overflow: hidden;
-  transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2.06);
+  transition: all 300ms cubic-bezier(0, 0.11, 0.35, 2.06);
   /* transition: all 0.3s ease; */
   z-index: 95;
   display: flex;
@@ -239,11 +240,8 @@ h4 {
 }
 
 .search-festival .icon-font-awesome {
-  position: absolute;
-  top: 10;
-  left: 10;
-  width: 26px;
-  height: 26px;
+  width: 40px;
+  height: 38.6px;
   color: var(--blue-alt);
   font-size: 1rem;
   background-color: var(--light-gray-alt);
@@ -279,7 +277,7 @@ h4 {
 .search-festival .input-search input {
   position: relative;
   top: 0;
-  right: 0;
+  right: 24px;
   width: 100%;
   height: 100%;
   border: none;
@@ -398,7 +396,7 @@ h4 {
   border-radius: 20px 20px 0px 0px;
   height: 30px;
   text-align: center;
-  transition: 1s;
+  transition: .3s;
   z-index: 90;
 }
 .fest-info {
@@ -421,7 +419,7 @@ h4 {
   justify-content: center;
   align-items: center;
   padding: 8px 20px;
-  transition: 0.5s;
+  transition: 0.3s;
   opacity: 0;
   visibility: hidden;
 }
@@ -436,7 +434,7 @@ h4 {
 .festival-card:hover .fest-info .short-desc {
   opacity: 1;
   visibility: visible;
-  transition-delay: 0.5s;
+  transition-delay: 0.2s;
 }
 
 .festival-card:hover .fest-info {
