--- a/src/assets/styles/view-festival-details.css
+++ b/src/assets/styles/view-festival-details.css
@@ -29,22 +29,25 @@
 }
 
 /************************************************    back menu - start     ***************************************************/
-
+/* 
 .back-menu {
   display: flex;
   justify-content: center;
   border-bottom: var(--light-gray-alt) 1px solid;
   padding: 5px;
-}
+} */
 .back {
+  display: flex; 
+  align-items: center;
+  gap: 12px;
   color: var(--dark-blue-alt);
   border: none;
   background-color: transparent;
   font-size: 1rem;
   text-transform: uppercase;
-  position: absolute;
-  top: 20px;
-  left: 40px;
+  /* position: absolute;
+  top: 60px;
+  left: 40px; */
   transition: transform 0.2s;
   cursor: pointer;
 }
@@ -101,7 +104,7 @@
   letter-spacing: 6px;
   margin: 0;
   text-transform: uppercase;
-  /* background: url(img/try.jpg) 50% 50%; */
+  /* background: url(/images/bg-contact-us.jpg) 50% 50%; */
   background-size: cover;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -124,10 +127,14 @@
   margin-bottom: 1rem;
 }
 .fest-loc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
   background-color: white;
   color: var(--dark-gray-alt);
   font-weight: 600;
-  font-size: 0.8rem;
+  font-size: 0.6rem;
   text-align: center;
   text-transform: uppercase;
   width: 10rem;
@@ -182,6 +189,8 @@
   margin: 0 3px;
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
   line-height: 0;
+  border-radius: 12px;
+  overflow: hidden;
 }
 .box > img {
   width: 200%;
@@ -299,7 +308,7 @@
   }
   .fest-loc {
     width: 8rem;
-    font-size: 0.6rem;
+    font-size: 0.4rem;
   }
   .content-fest-link-source {
     font-size: 0.7rem;
