--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
    --dark-gray-alt: #4f5362;
    --dark-blue: #2a405b;
    --dark-blue-alt: #222328;
-   --blue: #3b55e6;
+   --blue: #6269cd;
    --blue-alt: #6269cd;
    --blue-alt-ctrl: #181e4b;
    --yellow: #f3d351;
