--- a/src/assets/styles/view-festival-details.css
+++ b/src/assets/styles/view-festival-details.css
@@ -7,8 +7,8 @@
    --dark-gray-alt: #a1a6bb;
    --dark-blue: #2a405b;
    --dark-blue-alt: #222328;
-   --blue: #3b55e6;
-   --blue-alt: #334cd5;
+   --blue: #6269cd;
+   --blue-alt: #6269cd;
    --yellow: #f3d351;
    --yellow-alt: #ebc63b;
    --orange: #fe5339;
