--- a/src/assets/styles/festival.css
+++ b/src/assets/styles/festival.css
@@ -201,8 +201,8 @@ h4 {
    display: block;
    background-color: var(--light-gray-alt);
    color: var(--blue-alt-ctrl);
-   border-color: var(--blue-alt);
-   border: 1.9px solid var(--blue-alt);
+   border-color: var(--blue);
+   border: 1.9px solid var(--blue);
    width: 140px;
    border-radius: 50px;
    font-size: 1rem;
@@ -216,7 +216,7 @@ h4 {
 .active,
 .filter-btn:hover {
    transform: scale(1.1);
-   background-color: var(--blue-alt);
+   background-color: var(--blue);
    /* background-image: linear-gradient(180deg, var(--purple-light) 0%, #6154f3 100%); */
    color: white;
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 24px 0px;
@@ -227,7 +227,7 @@ h4 {
    width: 38.6px;
    height: 38.6px;
    background-color: var(--light-gray-alt);
-   border: 1.9px solid var(--blue-alt);
+   border: 1.9px solid var(--blue);
    border-radius: 60px;
    /* box-shadow: 0 0 0 5px #2573ef; */
    overflow: hidden;
@@ -242,7 +242,7 @@ h4 {
 .search-festival .icon-font-awesome {
    width: 40px;
    height: 38.6px;
-   color: var(--blue-alt);
+   color: var(--blue);
    font-size: 1rem;
    background-color: var(--light-gray-alt);
    border-radius: 60px;
@@ -254,7 +254,7 @@ h4 {
 }
 
 .icon-font-awesome:hover {
-   background-color: var(--blue-alt);
+   background-color: var(--blue);
    /* background-image: linear-gradient(180deg, var(--purple-light) 0%, #6154f3 100%); */
    color: white;
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 24px 0px;
