fix fetching data

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@
    --dark-blue-alt: #222328;
    --blue: #6269cd;
    --blue-alt: #6269cd;
+   --blue-alt-hov: #abb1ff;
    --blue-alt-ctrl: #181e4b;
    --yellow: #f3d351;
    --yellow-alt: #ebc63b;
