--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -120,13 +120,14 @@
 }
 
 .home-fest-btn {
-   background-color: #0a6bff;
+   background-color: var(--blue-alt);
+   /* background-color: #0a6bff; */
    border-radius: 50px;
    border: 0;
    text-decoration: none;
    box-shadow:
-      rgba(1, 60, 136, 0.5) 0 -1px 3px 0 inset,
-      rgba(0, 44, 97, 0.1) 0 3px 6px 0;
+      rgba(56, 12, 128, 0.2) 0 -1px 3px 0 inset,
+      rgba(56, 12, 128, 0.2) 0 3px 6px 0;
    box-sizing: border-box;
    color: #fff;
    font-size: 18px;
@@ -143,8 +144,8 @@
 }
 
 .home-fest-btn:hover {
-   background-image: linear-gradient(to right, #1fa2ff 0%, #35c0d8 51%, #1fa2ff 100%);
-   background-color: #065dd8;
+   background-image: linear-gradient(to right, #7980e4 0%, #949bfa 51%, #7980e4 100%);
+   background-color: var(--blue-alt);
    transform: translateY(-2px);
    background-position: right center; /* change the direction of the change here */
    color: #fff;
