add loading state

--- a/src/assets/styles/festival.css
+++ b/src/assets/styles/festival.css
@@ -348,7 +348,7 @@ h4 {
 
 .fest-gallery-main {
    display: flex;
-   justify-content: center;
+   justify-content: start;
    flex-wrap: wrap;
    max-width: 1400px;
    margin: 0 auto;
