--- a/src/assets/styles/loading.css
+++ b/src/assets/styles/loading.css
@@ -1,3 +1,4 @@
+/* GLOBAL LOADING */
 *,
 *:before,
 *:after {
@@ -321,7 +322,7 @@
    }
 }
 
-/* common */
+/* LOADING TEXT */
 .loading {
    font-size: 42px;
    font-family: 'Montserrat', sans-serif;
@@ -383,4 +384,70 @@
 }
 .loading03 span:nth-child(7) {
    animation-delay: 0.6s;
+}
+
+
+:root {
+   --loader-background-color: #EEEEEE;
+   --loader-highlight-color: #DEDEDE;
+}
+
+/* LOADING  SKELETON */
+
+.card-skeleton-cont { 
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.card-skeleton {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   background-color: #fff;
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+   width: 300px;
+   height: 420px;
+   border-radius: 20px;
+   overflow: hidden;
+   margin: 1.2rem;
+}
+
+.skeleton-loader {
+   width: 250px;
+   height: 20px;
+   background: linear-gradient(90deg, var(--loader-background-color) 25%, var(--loader-highlight-color) 50%, var(--loader-background-color) 75%);
+   background-size: 200% 100%;
+   animation: loading 2s infinite ease-in-out;
+   border-radius: 8px;
+   padding-bottom: 8px;
+}
+
+.avatar-skeleton {
+   width: 100px;
+   height: 100px;
+   background: linear-gradient(90deg, var(--loader-background-color) 25%, var(--loader-highlight-color) 50%, var(--loader-background-color) 75%);
+   background-size: 200% 100%;
+   animation: loading 2s infinite ease-in-out;
+   border-radius: 50%;
+   margin-bottom: 20px;
+}
+
+.cover-image-skeleton {
+   width: 100%;
+   height: 90%;
+   background: linear-gradient(90deg, var(--loader-background-color) 25%, var(--loader-highlight-color) 50%, var(--loader-background-color) 75%);
+   background-size: 200% 100%;
+   animation: loading 2s infinite ease-in-out;
+   border-radius: 8px;
+   margin-bottom: 12px;
+}
+
+@keyframes loading {
+   0% {
+       background-position: 200% 0;
+   }
+   100% {
+       background-position: -200% 0;
+   }
 }
