--- a/src/assets/styles/loading.css
+++ b/src/assets/styles/loading.css
@@ -414,8 +414,6 @@
 }
 
 .skeleton-loader {
-   width: 250px;
-   height: 20px;
    background: linear-gradient(90deg, var(--loader-background-color) 25%, var(--loader-highlight-color) 50%, var(--loader-background-color) 75%);
    background-size: 200% 100%;
    animation: loading 2s infinite ease-in-out;
@@ -441,6 +439,13 @@
    animation: loading 2s infinite ease-in-out;
    border-radius: 8px;
    margin-bottom: 12px;
+}
+.title-prim-skeleton {
+   width: 100%;
+   height: 90%;
+   background: linear-gradient(90deg, var(--blue-alt) 25%, var(--purple-light) 50%, var(--blue-alt) 75%);
+   background-size: 200% 100%;
+   animation: loading 2s infinite ease-in-out;
 }
 
 @keyframes loading {
