--- a/src/assets/styles/festival.css
+++ b/src/assets/styles/festival.css
@@ -448,8 +448,10 @@ h4 {
 @media only screen and (max-width: 1380px) {
    .fest-gallery-main {
       max-width: 1200px;
+      justify-content: center;
    }
 }
+
 @media (max-width: 800px) {
    .view-btns {
       max-width: 17%;
